Grok changes
************

0.11.1 (unreleased)
===================

Bug fixes
---------

* Fix https://bugs.launchpad.net/grok/+bug/161948: grok.testing.grok()
  now also loads the ZPT template factories so that unit tests that
  need to configure views with ZPT templates continue to work.

0.11 (2007-11-08)
=================

Feature changes
---------------

* Integrated skins and layers: ``grok.layer``, ``grok.IGrokLayer``,
  ``grok.Skin``.

* Grok now supports hooking in new template languages without much work.
  See also doc/minitutorials/template-languages.txt. See Restructuring below
  for more techinical info.

* Accessing a template macro via context/@@the_view/the_template is now
  deprecated for the standard ZPT story of using
  context/@@the_view/macro/the_template.

* There is now a grok.direct() directive that can be used on GlobalUtilities
  to mark that the class provides the utility interface directly and need
  no instantiation.

* Removed ``grok.define_permission`` in favor of the
  ``grok.Permission`` component base class. You should now subclass
  this base class to define permissions. See also
  doc/minitutorials/permissions.txt

* Added the ``grok.Role`` component base class to define roles.

* The admin UI now displays and offers deletion of broken objects.

* Removed support for defining model schemas using an inner class with
  the special name ``fields``. This was abandoned in favor the usual
  Zope 3 way of defining schemas in interfaces and implementing them
  in our Grok models.

* Integrated REST support. See doc/minitutorials/rest.txt for usage
  information.

Bug fixes
---------

* Remove zc.recipe.egg, zc.recipe.filestorage, zc.recipe.testrunner,
  zc.zope3recipes from version requirements.

* The admin UI now shows interfaces in modules.

* ``handle...`` is not a special function name anymore.

* Views no longer need a custom ``AbsoluteURL`` view to determine
  their URL, since each instance now properly gets a ``__name__``